2010-09-16  Vadim Kurland  <vadim@vk.crocodile.org>

	* SSHSession.cpp: Refs #1699 installation session status was reset
	from "failure" to "success" in a configuration where fwbuilder gui
	was running on Windows and talked to Cisco router using pscp.exe
	and plink.exe and ssh session failed because of authentication
	failure. This happened because plink.exe terminated with return
	status "success" even in case of authentication failure.

	* generatedScriptTestsIpfilter.cpp (GeneratedScriptTest::runCompiler):
	unit tests to test manifest and activation commands in the generated
	.fw script for ipfilter. Refs #1702

	* FirewallInstaller.cpp (FirewallInstaller::getGeneratedFileFullPath): 
	fixed how we append suffix ".fw" to the name of generated script
	when it is preconfigured in the firewall settings dialog and already
	includes ".fw" suffix (it was added twice).

	* CompilerDriver_ipf_run.cpp (CompilerDriver_ipf::run): fixed #1702
	"Wrong path in the activation script for ipfilter". Activation command
	embedded in the generated .fw script used local path to the generated
	.conf file on the machine where fwbuilder compiler was running.

2010-09-14  Vadim Kurland  <vadim@vk.crocodile.org>

	* FirewallInstaller.cpp (getGeneratedFileFullPath): fixed SF bug
	3049665 "Firewall Settings -> Output file name misses .fw
	extension"

	* CompilerDriver_ipt_policy.cpp (processPolicyRuleSet): fixed
	#1707 "call function "prolog_commands" from the main iptables
	script part instead of function "script_body" when prolog should
	be executed after iptables reset"

	* configlets/linux24/script_skeleton (cmd): fixed SF bug 3060325
	"Address table object and prolog script conflict". Generated
	script should run prolog before checking and loading run-time
	address tables.

	* NATCompiler_PrintRule.cpp (processNext): fixed SF bug 3057503
	"DNAT rule with dynamic IP has a white space, causing error".

	* PolicyCompiler_PrintRule.cpp (_printIpSetMatch): fixed #1705